
* SOLR-15748: A v2 equivalent of CLUSTERSTATUS command is now available at `GET /api/cluster`. Collection listing,
  previously at this path, can still be accessed at `GET /api/collections`. (Joshua Ouma via Jason Gerlowski)

* SOLR-13626: Document the SystemInfoHandler in the Ref Guide.  (Tony Cook via Eric Pugh)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------

* SOLR-16436: Fix "false positive" suggestions from DirectSolrSpellChecker when using maxQueryFrequency > 1 in
  multi-shard collections (hossman)

* SOLR-15854: Upgrade semver library to fix versioning constraint bugs in the PackageManager. (Houston Putman, Kevin Risden)

* SOLR-16160: UpdateXmlMessages duplicate data when data is removed and then added in the same message (Alex Deparvu via Kevin Risden)

* SOLR-16483: Fix IndexOutOfBounds in RecursiveNumericEvaluator (Bendegúz Ács via Kevin Risden)

* SOLR-16363: DirectUpdateHandler2 should not throw UnknownFormatConversionException (Kevin Risden)

* SOLR-16293: Luke request fails for document with a binary field (Kevin Risden)

* SOLR-16477: Collection RENAME api creates broken alias (Alex Deparvu via Kevin Risden)

* SOLR-10918: Fix IntPointField hashing for HLL (Houston Putman)

* SOLR-16274: HEAD request for managed resource returns 500 Server Error (Kevin Risden)

* SOLR-16502: Multiple CopyField should not limit to first maxChars (Fredrik Rodland, Kevin Risden)

Build
---------------------
* Upgrade forbiddenapis to 3.4 (Uwe Schindler)

* SOLR-16432: Upgrade the gradle wrapper to 7.5.1 (Shawn Heisey, Kevin Risden)

* SOLR-16476: Remove commons-text dependency from solr-core (Kevin Risden)

* SOLR-16442: Upgrade to Lucene 9.4.1 (Christine Poerschke)

Other Changes
---------------------
* SOLR-16150: Embedded ZK Server used for zkRun should advertise itself on specific bound interfaces instead of
  generically on localhost. (Mike Drob)

* SOLR-16481: Upgrade Bats to 1.8.0 (Kevin Risden)
